infra/terraform/envs/dev/k8s/gateway_api/tg-gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tg-gateway-route
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: my-gateway
      namespace: default
      sectionName: https
  hostnames:
    - alarm.tuby.shop
  rules:
    - matches:
        - path:
            type: Exact
            value: /webhook/telegram
      backendRefs:
        - group: ""
          kind: Service
          name: tg-gateway-service
          port: 8000
          weight: 1
